--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,6 @@ html(lang="en")
         title Document
     body
         ul
-            li 
-            li
-            li
+            li= method
+            li= path
+            li= randomNum
